@startuml
title design

class Car {

}
Car -->"*" Reservation
Car -->"1" CarType

class Reservation {

}
Reservation --|> Quote

class Quote {
}


class CarType {
    df
}

class ReservationException {
}

class CarRentalCompany {
}
CarRentalCompany ..|> ICarRentalCompany
CarRentalCompany -->"*" Car
CarRentalCompany -->"*" CarType
interface ICarRentalCompany {
}

class ReservationConstraints {
}

class Client {
}
Client -->"1" ICarRentalCompany

@enduml